--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
     "framer-motion": "^11.2.12",
+    "ibantools": "^4.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
